--- a/style.css
+++ b/style.css
@@ -30,3 +30,16 @@ li {
 #limpar:hover { opacity: 0.9 }
 
 li span { cursor: pointer }
+
+.concluida { text-decoration: line-through; opacity: 0.7 }
+
+li > input[type="checkbox"] { margin-right: 8px }
+li > span { margin-right: 8px }
+li > button { margin-left: 8px }
+
+.sr-only {
+    position: absolute !important;
+    width: 1px; height: 1px;
+    padding: 0; margin: -1px; overflow: hidden;
+    clip: rect(0,0,0,0); white-space: nowrap; border: 0;
+}
